--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-v4-rtl": "^4.6.0-3",
     "lodash": "^4.17.21",
+    "msw": "^0.36.5",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "overmind": "^28.0.1",
